<resources>
    <string name="app_name">GPX/FIT Exporter</string>
    <string name="starting">Starting...</string>
    <string name="force_speed">Force Speed</string>
    <string name="speed">Default Speed:</string>
    <string name="inject_course_points">Inject Course Points</string>
    <string name="use_3d_distance">Use 3D Distance</string>
    <string name="use_walking_grade_factor">Use Walking Grade Factor</string>
    <string name="reduce_points_to">Reduce Points to</string>
    <string name="points">points</string>
    <string name="no_permission">No permission to read files.</string>
    <string name="no_server">Server could not be started</string>
    <string name="serving_from">Serving from: %1$s</string>
    <string name="no_files_to_serve">No files to serve</string>
    <string name="help">Help</string>
    <string name="menu">Menu</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="disable_dark_mode">Disable dark mode</string>
    <string name="speed_settings">Speed settings</string>
    <string name="course_points_settings">Points settings</string>
    <string name="additional_settings">Additional settings</string>
    <string name="file_size_kb">%1$s KB</string>
    <string name="file_size_mb">%1$s MB</string>

    <string-array name="speedunits">
        <item name="minkm">min/km</item>
        <item name="kmh">km/h</item>
        <item name="minmil">min/mil</item>
        <item name="mph">mph</item>
    </string-array>

</resources>
