<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_action_menu_light"
        android:orderInCategory="101"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"
                app:showAsAction="withText" />

            <item
                android:id="@+id/dark_mode"
                android:icon="@drawable/ic_dark_mode"
                android:title="@string/enable_dark_mode"
                app:showAsAction="withText" />
        </menu>
    </item>
</menu>